ui/03-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sw-ui
  namespace: skywalking
  labels:
    app: sw-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sw-ui
  template:
    metadata:
      labels:
        app: sw-ui
    spec:
      containers:
        - name: sw-ui
          image: apache/skywalking-ui:8.5.0
          ports:
            - containerPort: 8080
              name: page
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 2Gi
